--- a/src/main/resources/templates/support.html
+++ b/src/main/resources/templates/support.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="user-info">
                     <!--TODO: Update user name and role according to the currently logged in admin user-->
-                    <span class="user-name">Johnny <strong>Walker</strong></span>
-                    <span class="user-role">Merchant</span>
+                    <span class="user-name">Joanna <strong>Appleseed</strong></span>
+                    <span class="user-role">Support</span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
@@ -114,8 +114,8 @@
                                         <span class="badge badge-pill badge-success">Pro</span>
                                     </a>
                                 </li>
-                                <li><a href="#">Merchant Dashboard</a></li>
-                                <li><a href="#">Customer Dashboard</a></li>
+                                <li><a href="#">Support Dashboard</a></li>
+                                <li><a href="#">User Dashboard</a></li>
                             </ul>
                         </div>
                     </li>
@@ -127,7 +127,11 @@
                         <div class="sidebar-submenu">
                             <ul>
                                 <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/merchant/new-transaction">Post a new transaction</a></li>
+                                <li><a href="/web/support/list-users">List current users</a></li>
+                                <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
+                                <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
+                                <li><a href="/web/support/transaction-history">Get transaction history</a></li>
+                                <li><a href="/web/support/review-transaction">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -218,7 +222,7 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
         <div class="container-fluid">
-            <h2>Merchant</h2>
+            <h2>Support</h2>
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
@@ -236,7 +240,11 @@
                     <p>What would you like to do?</p>
                     <ul>
                         <li><a href="/web/admin/new-user">Add user</a></li>
-                        <li><a href="/web/merchant/new-transaction">Post a new transaction</a></li>
+                        <li><a href="/web/support/list-users">List current users</a></li>
+                        <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
+                        <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
+                        <li><a href="/web/support/transaction-history">Get a transaction history for a card number</a></li>
+                        <li><a href="/web/support/review-transaction">Review transactions</a></li>
                     </ul>
                 </div>
             </div>
@@ -256,7 +264,6 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
 
