--- a/src/main/resources/templates/support/manage-ip.html
+++ b/src/main/resources/templates/support/manage-ip.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="user-info">
                     <!--TODO: Update user name and role according to the currently logged in admin user-->
-                    <span class="user-name">Johnny <strong>Walker</strong></span>
-                    <span class="user-role">Merchant</span>
+                    <span class="user-name">Joanna <strong>Appleseed</strong></span>
+                    <span class="user-role">Support</span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
@@ -114,8 +114,8 @@
                                         <span class="badge badge-pill badge-success">Pro</span>
                                     </a>
                                 </li>
-                                <li><a href="#">Merchant Dashboard</a></li>
-                                <li><a href="#">Customer Dashboard</a></li>
+                                <li><a href="#">Support Dashboard</a></li>
+                                <li><a href="#">User Dashboard</a></li>
                             </ul>
                         </div>
                     </li>
@@ -127,7 +127,11 @@
                         <div class="sidebar-submenu">
                             <ul>
                                 <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/merchant/new-transaction">Post a new transaction</a></li>
+                                <li><a href="/web/support/list-users">List current users</a></li>
+                                <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
+                                <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
+                                <li><a href="/web/support/transaction-history">Get transaction history</a></li>
+                                <li><a href="/web/support/review-transaction">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -218,26 +222,49 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
         <div class="container-fluid">
-            <h2>Merchant</h2>
+            <h2>Support</h2>
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">App Status</h4>
-                        <p>There are currently no events or notifications that need your attention. Have a nice day!</p>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-primary mr-2">Show events</a>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-success">OK</a>
+                    <div class="form-group col-md-12">
+                        <!--Render a thymeleaf table of suspicious ips -->
+                        <p>Current Suspicious IPs</p>
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">IP Address</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="ip : ${ips}">
+                                <td th:text="${ip.id}"></td>
+                                <td th:text="${ip.ip}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <div class="form-group col-md-12">
-                    <p id="user-greeting">Hello there!</p>
-                    <p>What would you like to do?</p>
-                    <ul>
-                        <li><a href="/web/admin/new-user">Add user</a></li>
-                        <li><a href="/web/merchant/new-transaction">Post a new transaction</a></li>
-                    </ul>
+                    <p>Manage suspicious IPs</p>
+                    <form action="/web/support/manage-ip" method="post">
+                        <div class="form-group col-md-12">
+                            <label for="ip-address">IP Address</label>
+                            <input type="text" class="form-control" id="ip-address" name="ip-address"
+                                   placeholder="IP Address">
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="action">Action</label>
+                            <select id="action" name="action" class="form-control">
+                                <option selected>Choose...</option>
+                                <option value="add">Add</option>
+                                <option value="remove">Remove</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <button type="submit" class="btn btn-primary" onclick=manageIP()>Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <footer class="text-center">
@@ -256,9 +283,9 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/support/manage-ip.js}"></script>
 
 <script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
