--- a/src/main/resources/templates/support/manage-stolencard.html
+++ b/src/main/resources/templates/support/manage-stolencard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Administration - Anti Fraud System</title>
+    <title>Merchant - Anti Fraud System</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles/mainStyle.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -73,9 +73,9 @@
                          alt="User picture">
                 </div>
                 <div class="user-info">
-                    <!-- TODO: Update username and role according to the currently logged in admin user-->
-                    <span class="user-name">John <strong>Doe</strong></span>
-                    <span class="user-role">Administrator</span>
+                    <!--TODO: Update user name and role according to the currently logged in admin user-->
+                    <span class="user-name">Joanna <strong>Appleseed</strong></span>
+                    <span class="user-role">Support</span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
@@ -114,7 +114,7 @@
                                         <span class="badge badge-pill badge-success">Pro</span>
                                     </a>
                                 </li>
-                                <li><a href="#">Server Dashboard</a></li>
+                                <li><a href="#">Support Dashboard</a></li>
                                 <li><a href="#">User Dashboard</a></li>
                             </ul>
                         </div>
@@ -127,10 +127,11 @@
                         <div class="sidebar-submenu">
                             <ul>
                                 <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/admin/delete-user">Remove user</a></li>
                                 <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/admin/update-role">Update user role</a></li>
-                                <li><a href="/web/admin/update-access">Update user access</a></li>
+                                <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
+                                <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
+                                <li><a href="/web/support/transaction-history">Get transaction history</a></li>
+                                <li><a href="/web/support/review-transaction">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -221,27 +222,49 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
         <div class="container-fluid">
-            <h2>Registered users</h2>
+            <h2>Support</h2>
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <!--Render a thymeleaf table of user and usernames-->
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">Full name</th>
-                            <th scope="col">Username</th>
-                            <th scope="col">Role</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="user : ${users}">
-                            <td th:text="${user.name}"></td>
-                            <td th:text="${user.username}"></td>
-                            <td th:text="${user.role}"></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="form-group col-md-12">
+                        <!--Render a thymeleaf table of suspicious ips -->
+                        <p>Cards flagged as stolen</p>
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Card number</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="card : ${cards}">
+                                <td th:text="${card.id}"></td>
+                                <td th:text="${card.number}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group col-md-12">
+                    <p>Manage stolen cards</p>
+                    <form action="/web/support/manage-stolencard" method="post">
+                        <div class="form-group col-md-12">
+                            <label for="stolen-card-number">Stolen card number</label>
+                            <input type="text" class="form-control" id="stolen-card-number" name="stolen-card-number"
+                                   placeholder="Enter card number">
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="action">Action</label>
+                            <select id="action" name="action" class="form-control">
+                                <option selected>Choose...</option>
+                                <option value="add">Add</option>
+                                <option value="remove">Remove</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <button type="submit" class="btn btn-primary" onclick=manageStolenCard()>Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <footer class="text-center">
@@ -260,12 +283,11 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/support/manage-stolencard.js}"></script>
 
-<script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
 </body>
 </html>
