Updated web controller and username and role modelling in html
- The controllers only handle the views (no more helper methods)
- Username and roles are provided for every template by a global controller advice
- Html pages are updated accordingly
- Success page was removed
- Minor code cleaning

--- a/src/main/resources/templates/support/list-users.html
+++ b/src/main/resources/templates/support/list-users.html
@@ -73,9 +73,9 @@
                          alt="User picture">
                 </div>
                 <div class="user-info">
-                    <!-- TODO: Update username and role according to the currently logged in admin user-->
-                    <span class="user-name">John <strong>Doe</strong></span>
-                    <span class="user-role">Administrator</span>
+                    <!--Add thymeleaf username and role-->
+                    <span class="user-name" th:text="${fullname}"></span>
+                    <span class="user-role" th:text="${userrole}"></span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
