--- a/src/main/resources/templates/merchant/new-transaction.html
+++ b/src/main/resources/templates/merchant/new-transaction.html
@@ -73,9 +73,9 @@
                          alt="User picture">
                 </div>
                 <div class="user-info">
-                    <!--TODO: Update user name and role according to the currently logged in admin user-->
-                    <span class="user-name">Johnny <strong>Walker</strong></span>
-                    <span class="user-role">Merchant</span>
+                    <!--Add thymeleaf username and role-->
+                    <span class="user-name" th:text="${fullname}"></span>
+                    <span class="user-role" th:text="${userrole}"></span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
