--- a/src/main/resources/templates/support/review-transaction.html
+++ b/src/main/resources/templates/support/review-transaction.html
@@ -73,8 +73,8 @@
                          alt="User picture">
                 </div>
                 <div class="user-info">
-                    <!--Add thymeleaf username-->
-                    <span class="user-name" th:text="${username}"></span>
+                    <!--Add thymeleaf username and role-->
+                    <span class="user-name" th:text="${fullname}"></span>
                     <span class="user-role" th:text="${userrole}"></span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
