--- a/src/main/resources/templates/admin/new-user.html
+++ b/src/main/resources/templates/admin/new-user.html
@@ -16,24 +16,24 @@
 <body>
 <!--Logout navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="/web/" class="navbar-brand"><b>Anti Fraud System</b></a>
+    <a th:href="@{/web/}" class="navbar-brand"><b>Anti Fraud System</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Collection of nav links, forms, and other content for toggling -->
     <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
         <div class="navbar-nav">
-            <a href="/web/" class="nav-item nav-link">Home</a>
-            <a href="/web/about/" class="nav-item nav-link">About</a>
+            <a th:href="@{/web/}" class="nav-item nav-link">Home</a>
+            <a th:href="@{/web/about}" class="nav-item nav-link">About</a>
             <div class="nav-item dropdown">
                 <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Services</a>
                 <div class="dropdown-menu">
-                    <a href="/web/merchant/" class="dropdown-item">Merchant view</a>
-                    <a href="/web/support/" class="dropdown-item">Support view</a>
-                    <a href="/web/admin/" class="dropdown-item">Administration</a>
+                    <a th:href="@{/web/merchant}" class="dropdown-item">Merchant view</a>
+                    <a th:href="@{/web/support}" class="dropdown-item">Support view</a>
+                    <a th:href="@{/web/admin}" class="dropdown-item">Administration</a>
                 </div>
             </div>
-            <a href="/web/contact" class="nav-item nav-link">Contact</a>
+            <a th:href="@{/web/contact}" class="nav-item nav-link">Contact</a>
         </div>
         <form class="navbar-form form-inline">
             <div class="input-group search-box">
@@ -244,7 +244,7 @@
                             <input type="password" class="form-control" id="signup-confirm_password"
                                    placeholder="Confirm Password" required="required">
                         </div>
-                        <input type="submit" class="btn btn-primary btn-block" value="Sign up" onclick=send()>
+                        <input type="submit" class="btn btn-primary btn-block" value="Sign up" onclick=sendSignup()>
                     </form>
                 </div>
             </div>
