--- a/src/main/resources/templates/admin/delete-user.html
+++ b/src/main/resources/templates/admin/delete-user.html
@@ -126,11 +126,11 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/admin/delete-user">Remove user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/admin/update-role">Update user role</a></li>
-                                <li><a href="/web/admin/update-access">Update user access</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/admin/delete-user}">Remove user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/admin/update-role}">Update user role</a></li>
+                                <li><a th:href="@{/web/admin/update-access}">Update user access</a></li>
                             </ul>
                         </div>
                     </li>
@@ -225,10 +225,11 @@
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <form action="/web/admin/delete-user" method="post">
-                        <p class="hint-text">Please enter the username of the user you want to remove from the system.</p>
+                    <form th:action="@{/web/admin/delete-user}" method="post">
+                        <p class="hint-text">Please enter the username of the user you want to remove from the
+                            system.</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="delete-username" placeholder="Your name"
+                            <input type="text" class="form-control" id="delete-username" placeholder="Username"
                                    required="required">
                         </div>
                         <input type="submit" class="btn btn-danger btn-block" value="Delete user" onclick=deleteUser()>
@@ -251,12 +252,9 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
-
-<script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
 
 </body>
 </html>
