--- a/src/main/resources/templates/admin/new-user.html
+++ b/src/main/resources/templates/admin/new-user.html
@@ -126,11 +126,11 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/admin/delete-user">Remove user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/admin/update-role">Update user role</a></li>
-                                <li><a href="/web/admin/update-access">Update user access</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/admin/delete-user}">Remove user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/admin/update-role}">Update user role</a></li>
+                                <li><a th:href="@{/web/admin/update-access}">Update user access</a></li>
                             </ul>
                         </div>
                     </li>
@@ -226,7 +226,7 @@
             <div class="row">
                 <div class="form-group col-md-12">
                     <!--TODO: Remove success url. Redirect to landing page and add an alert via javascript-->
-                    <form action="/web/admin/new-user" method="post">
+                    <form th:action="@{/web/admin/new-user}" method="post">
                         <p class="hint-text">Fill in this form to add a new user:</p>
                         <div class="form-group">
                             <input type="text" class="form-control" id="signup-name" placeholder="Full name"
@@ -267,7 +267,6 @@
 <script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
 </body>
 </html>
