--- a/src/main/resources/templates/admin/update-access.html
+++ b/src/main/resources/templates/admin/update-access.html
@@ -126,11 +126,11 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/admin/delete-user">Remove user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/admin/update-role">Update user role</a></li>
-                                <li><a href="/web/admin/update-access">Update user access</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/admin/delete-user}">Remove user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/admin/update-role}">Update user role</a></li>
+                                <li><a th:href="@{/web/admin/update-access}">Update user access</a></li>
                             </ul>
                         </div>
                     </li>
@@ -225,8 +225,8 @@
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <form action="/web/admin/update-role" method="post">
-                        <p class="hint-text">Fill in this form to update the acess level (lock/unlock) a user:</p>
+                    <form th:action="@{/web/admin/update-access}" method="post">
+                        <p class="hint-text">Fill in this form to update the access level (lock/unlock) a user:</p>
                         <div class="form-group">
                             <input type="text" class="form-control" id="username" placeholder="Username"
                                    required="required">
